<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:background="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent" >

                    <TextView
                        android:id="@+id/tv_username_banner"
                        style="@style/AppTheme.TextSplash"
                        android:text="@string/username" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivDetailAvatar"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvUsernameProfil"
                    style="@style/AppTheme.TextTitle"
                    android:layout_marginTop="8dp"
                    android:text="@string/username"
                    app:layout_constraintStart_toStartOf="@+id/ivDetailAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/ivDetailAvatar" />

                <TextView
                    android:id="@+id/tvNameDetail"
                    style="@style/AppTheme.TextMain"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_card"
                    app:layout_constraintStart_toStartOf="@+id/tvUsernameProfil"
                    app:layout_constraintTop_toBottomOf="@+id/tvUsernameProfil" />

                <ImageView
                    android:id="@+id/iconCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_office"
                    app:layout_constraintStart_toStartOf="@+id/tvNameDetail"
                    app:layout_constraintTop_toBottomOf="@+id/tvNameDetail" />

                <TextView
                    android:id="@+id/tvCompany"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/company_card"
                    app:layout_constraintBottom_toBottomOf="@+id/iconCompany"
                    app:layout_constraintStart_toEndOf="@+id/iconCompany"
                    app:layout_constraintTop_toBottomOf="@+id/tvNameDetail" />

                <ImageView
                    android:id="@+id/iconLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="@+id/iconCompany"
                    app:layout_constraintTop_toBottomOf="@+id/iconCompany" />

                <TextView
                    android:id="@+id/tvLocationDetail"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="8dp"
                    android:text="@string/location"
                    app:layout_constraintBottom_toBottomOf="@+id/iconLocation"
                    app:layout_constraintStart_toEndOf="@+id/iconLocation"
                    app:layout_constraintTop_toTopOf="@+id/iconLocation" />

                <TextView
                    android:id="@+id/tvDetailRepo"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginTop="8dp"
                    android:text="@string/angka"
                    app:layout_constraintStart_toStartOf="@+id/iconLocation"
                    app:layout_constraintTop_toBottomOf="@+id/iconLocation" />

                <TextView
                    android:id="@+id/tvRepo"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="4dp"
                    android:text="@string/repository"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDetailRepo"
                    app:layout_constraintStart_toEndOf="@+id/tvDetailRepo"
                    app:layout_constraintTop_toTopOf="@+id/tvDetailRepo" />

                <TextView
                    android:id="@+id/tvDetailFollowers"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="8dp"
                    android:text="@string/angka"
                    app:layout_constraintBottom_toBottomOf="@+id/tvRepo"
                    app:layout_constraintStart_toEndOf="@+id/tvRepo"
                    app:layout_constraintTop_toTopOf="@+id/tvRepo" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="4dp"
                    android:text="@string/follower"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDetailFollowers"
                    app:layout_constraintStart_toEndOf="@+id/tvDetailFollowers"
                    app:layout_constraintTop_toTopOf="@+id/tvDetailFollowers" />

                <TextView
                    android:id="@+id/tvDetailFollowing"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="8dp"
                    android:text="@string/angka"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/AppTheme.TextDesc"
                    android:layout_marginStart="4dp"
                    android:text="@string/following"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDetailFollowing"
                    app:layout_constraintStart_toEndOf="@+id/tvDetailFollowing"
                    app:layout_constraintTop_toTopOf="@+id/tvDetailFollowing" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvRepo" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="150dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_bookmark"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

